# kaalbhairav

./: .env.example  .gitignore  .vercelignore  ASTRO_CALCULATIONS_IMPLEMENTATION.md  CODEX_FINAL_CHECKLIST.md  ClaudeNext.md  DEPLOYMENT_REMOTE_SWISS_ENGINE.md  LICENSE  NOTICE.md  PLAN.md  QandA.md  README.md  RagError.md  TARAYAI_AUDIT_FIX_IMPLEMENTATION_REPORT.md  calculations.md  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json  vitest.config.ts
app/: global-error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
artifacts/: astro-final-300-events.jsonl  astro-final-qanda-report.json  astro-final-qanda-summary.md
docs/: astro-python-engine-integration-verification.md  astro-reading-v2-rollout.md  astro-v2-baseline-test-harness.md  astro-v2-preview-deployment.md  astro-v2-rollout-checklist.md  missing-swiss-ephemeris-data.md  swiss-ephemeris-data-source.md
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_detect.json  .graphify_extract.json  graph.html  (+9 more)
services/astro-engine/python/astro_calculation_engine/: README.md  __init__.py  pyproject.toml
services/astro-engine/python/astro_calculation_engine/astro_calculation_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/astro-engine/python/astro_calculation_engine/astro_engine/: __init__.py  cli.py  constants.py  core.py  exporters.py  formatting.py  midpoints.py  models.py
(+925 files in other folders)
