[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-calculation-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pyswisseph",
  "timezonefinder",
  "python-dateutil",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
